--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
 }
 
 header {
+  position: fixed;
   width: 100%;
-  height: 60px;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -100,6 +101,7 @@ header nav ul li a:hover {
   height: 100%;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  z-index: -1000000;
 }
 
 .side-bar-left-container ul {
@@ -122,43 +124,57 @@ main {
   background: var(--white);
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  margin-top: 80px;
+  z-index: -1000;
 }
 
-main .container {
+main section {
+  height: 100vh;
+}
+
+main section .container {
   position: relative;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr .7fr;
-      grid-template-columns: 2fr .7fr;
+  -ms-grid-columns: 2fr .5fr;
+      grid-template-columns: 2fr .5fr;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+main section .container.active {
+  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr .2fr;
+      grid-template-columns: 2fr .2fr;
+}
+
+main footer {
+  width: 100%;
+  height: 200px;
+  background-color: #f5f5f5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.5em;
+  font-weight: 600;
+  z-index: 10000;
+}
+
+main footer a {
+  text-decoration: none;
+  color: #000;
 }
 
 main.active {
-  width: calc(100% - 80px);
+  width: 100%;
   left: 80px;
-}
-
-footer {
-  position: relative;
-  bottom: 0;
-  background-color: #f5f5f5;
-  padding: 10px;
-  border-top: 1px solid #e5e5e5;
-  width: calc(100% - 300px);
-}
-
-footer p {
-  font-size: 14px;
-  font-weight: 600;
-  font-family: 'Poppins', sans-serif;
-  color: #000;
-  margin-bottom: 0;
-}
-
-footer a {
-  text-decoration: none;
-  color: #000;
-  font-size: 14px;
-  font-weight: 600;
-  font-family: 'Poppins', sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
