--- a/style.scss
+++ b/style.scss
@@ -16,8 +16,9 @@ body{
     overflow-x: hidden;
 }
 header{ 
+    position: fixed;
     width: 100%;
-    height:60px;
+    height:80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -68,6 +69,7 @@ header{
     background: gray;
     height: 100%;
     transition: 0.5s;
+    z-index: -1000000;
     ul{
         padding-top: 60px;
         li a{
@@ -85,35 +87,38 @@ main{
     min-height: 100vh;
     background: var(--white);
     transition: 0.5s;
-    .container{
-        position: relative;
-        display: grid;
-        grid-template-columns: 2fr .7fr;
+    margin-top: 80px;
+    z-index: -1000;
+    section{
+        height: 100vh;
+        .container{
+            position: relative;
+            display: grid;
+            grid-template-columns: 2fr .5fr;
+            transition: 0.5s;
+        }.container.active{
+            position: relative;
+            display: grid;
+            grid-template-columns: 2fr .2fr
+        }
+    }footer{
+        width: 100%;
+        height: 200px;
+        background-color: #f5f5f5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.5em;
+        font-weight: 600;
+        z-index: 10000;
+        a{
+            text-decoration: none;
+            color: #000;
+        }
     }
+  
 }
 main.active{
-    width: calc(100% - 80px);
+    width:100%;
     left: 80px;
-}
-footer{
-    position: relative;
-    bottom: 0;
-    background-color: #f5f5f5;
-    padding: 10px;
-    border-top: 1px solid #e5e5e5;
-    width: calc(100% - 300px);
-    p{
-        font-size: 14px;
-        font-weight: 600;
-        font-family: 'Poppins', sans-serif;
-        color: #000;
-        margin-bottom: 0;
-    }
-    a{
-        text-decoration: none;
-        color: #000;
-        font-size: 14px;
-        font-weight: 600;
-        font-family: 'Poppins', sans-serif;
-    }
 }
