--- a/style.scss
+++ b/style.scss
@@ -70,11 +70,46 @@ header{
     height: 100%;
     transition: 0.5s;
     z-index: -1000000;
+    border-left: 10px solid gray;
     ul{
-        padding-top: 60px;
-        li a{
-            text-decoration: none;
+        position: absolute;
+        top:80px;
+        left: 0;
+        width: 100%;
+        li {
+            position: relative;
+            width: 100%;
+            list-style: none;
+            border-top-left-radius:30px ;
+            border-bottom-left-radius:30px ;
+            a{
+                position:relative;
+                display:block;
+                width:100%;
+                display:flex;
+                text-decoration: none;
+                color: #fff;
+            }   
+            a .icon{
+                position: relative;
+                display: block;
+                min-width: 60px;
+                height: 60px;
+                line-height: 70px;
+                text-align: center;
+            }
+            a .title{
+                position: relative;
+                display: block;
+                padding: 0 10px;
+                height: 60px;
+                line-height: 60px;
+                text-align: start;
+                white-space:nowrap;
+            }
+
         }
+            
     }
 }
 .side-bar-left-container.active{
@@ -89,17 +124,30 @@ main{
     transition: 0.5s;
     margin-top: 80px;
     z-index: -1000;
-    section{
-        height: 100vh;
         .container{
             position: relative;
             display: grid;
-            grid-template-columns: 2fr .5fr;
-            transition: 0.5s;
+            grid-template-columns: 2fr 500px;
+            transition: 2s;
+            height: 100vh;
+            .right{
+                border-left: 1px solid #e5e5e5;
+                height: 100%;
+                ul{
+                    list-style: none;
+                    li {
+                        padding: 20px;
+                        a{
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+             
         }.container.active{
             position: relative;
             display: grid;
-            grid-template-columns: 2fr .2fr
+            grid-template-columns: 2fr 300px;
         }
     }footer{
         width: 100%;
@@ -115,9 +163,8 @@ main{
             text-decoration: none;
             color: #000;
         }
-    }
-  
 }
+  
 main.active{
     width:100%;
     left: 80px;
