--- a/style.scss
+++ b/style.scss
@@ -109,9 +109,13 @@ header{
             }
 
         }
+        li:hover{
+            border-left: 10px solid red;
+        }
             
     }
 }
+
 .side-bar-left-container.active{
     width: 80px;
 }
